--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -265,7 +265,7 @@ bind "KP_MINUS" "dropc4" //Drop C4
 // ***********  **********
 //Buy Keys
 // Guide to setting these up: https://steamcommunity.com/sharedfiles/filedetails/?id=372204268
-alias "gengrenades" "buy flashbang;buy molotov;buy smokegrenade;buy flashbang"
+alias "gengrenades" "buy flashbang;buy smokegrenade;buy molotov;buy flashbang"
 bind "KP_ENTER" "gengrenades" //Standard Grenades
 alias "buyawp" "buy awp"
 bind "KP_PGUP" "buyawp" //AWP
