--- a/surf.cfg
+++ b/surf.cfg
@@ -1,14 +1,14 @@
-//
-// 	Adv. Surf Script
-// 	Made by
-// 	gz.
+echo |
+echo |  Adv. Surf Script
+echo |	Made by
+echo |	gz.
 // 	
 //
 //
-// 	To use this script, 
-//	type "exec surf.cfg" in console.
-//	This script cannot be used in multiplayer and 
-//	executing this script in multiplayer will result in nothing.
+// 	    To use this script, 
+//	    type "exec surf.cfg" in console.
+echo	This script cannot be used in multiplayer and 
+echo    executing this script in multiplayer will result in nothing.
 //
 //
 //
@@ -64,7 +64,7 @@ god
 // Startup Messages
 
 echo Advanced Surf Script Activated. Made by Snake1001.
-say Advanced Surf Script Activated. Made by Snake1001.
+say Advanced Surf Script Activated. Made by 
 echo .
 say .
 say To select which diffulty you want, type these into the console:
