--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -195,7 +195,7 @@ m_mouseaccel2 "0"
 m_mouseaccel1 "0"
 m_customaccel "0"
 
-cl_forcepreload "1" // Preloads The Whole Map & Sounds.
+cl_forcepreload "0" // Preloads The Whole Map & Sounds.
 cl_autohelp "0"
 cl_disablehtmlmotd "1"
 cl_showhelp "0"
@@ -248,8 +248,8 @@ snd_rear_stereo_speaker_position "135.0"
 //Remake by Maxim
 //Don't touch this
 alias "clutch" "clutchon"
-alias "clutchon" "voice_enable 0; clutchsoundon; gameinstructor_enable 1; cl_clearhinthistory; r_cleardecals; playvol buttons\weapon_confirm 0.5; say_team Voice Disabled, I can't hear anyone now; alias clutch clutchoff"
-alias "clutchoff" "voice_enable 1; clutchsoundoff; gameinstructor_enable 0; playvol buttons\button2 0.5; say_team Voice Enabled, I can hear you now; alias clutch clutchon"
+alias "clutchon" "voice_enable 0; clutchsoundon; cl_clearhinthistory; r_cleardecals; playvol buttons\weapon_confirm 0.5; say_team Voice Disabled, I can't hear anyone now; alias clutch clutchoff"
+alias "clutchoff" "voice_enable 1; clutchsoundoff; playvol buttons\button2 0.5; say_team Voice Enabled, I can hear you now; alias clutch clutchon"
 clutchoff
 //Clutch audio options.
 //Feel free to edit these how you like.
