--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -28,6 +28,7 @@ echo | showcrosshair - Shows Crosshair Settings in Console
 echo | showviewmodel - Shows Viewmodel Settings in Console
 echo | 
 echo | Binds:
+echo | Z = Radial Radio Key (Scroll to change wheels)
 echo | mouse5 = Jumpthrow
 echo | L = Clear decals
 echo | K = Push to Talk Keybind
@@ -101,6 +102,8 @@ bind "f5" "displaydamage"
 //bind "mouse4" "+crosshairsmoke"
 //Jumpthrow Key
 bind "MOUSE5" "+jumpthrow"
+//Radio Wheel Key
+bind "z" "+radialradio"
 
 
 // ************  **********
@@ -155,6 +158,14 @@ cl_radar_always_centered "0"
 cl_radar_icon_scale_min "0.6"
 cl_radar_rotate "1"
 cl_radar_square_with_scoreboard "1"
+
+// ************  **********
+// New Radio Wheel Binds
+
+cl_radial_radio_tab_2_text_1 Dropped Deagle";buy deagle;use weapon_deagle;drop;cheer"
+cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45;use weapon_ump45;drop;cheer"
+cl_radial_radio_tab_2_text_8 Dropped Rifle";buy m4a1; use weapon_m4a4;drop;cheer"
+
 
 // ************  **********
 // scales the HUD depending on what resolution you use, 1 is max.
@@ -259,7 +270,7 @@ alias "clutchsoundoff" "volume 0.7; snd_menumusic_volume 0; snd_deathcamera_volu
 
 // ***********  **********
 //Drop C4 Keybind
-alias "dropc4" "use weapon_c4;drop;say_team Dropping Bomb"
+alias "dropc4" "use weapon_c4;drop;playerchatwheel CW.DroppedBomb #Chatwheel_droppedbomb"
 bind "KP_MINUS" "dropc4" //Drop C4
 
 // ***********  **********
@@ -271,11 +282,11 @@ alias "buyawp" "buy awp"
 bind "KP_PGUP" "buyawp" //AWP
 alias "buygear" "buy vesthelm;buy vest;buy defuser"
 bind "KP_INS" "buygear" //Buy Standard Gear
-bind "kp_end" "buy mac10"
+bind "kp_end" "buy ump45"
 alias "buydeagle" "buy deagle"
 bind "KP_DOWNARROW" "buydeagle" //Buy Deagle
-alias "buyxm1014" "buy xm1014"
-bind "KP_PGDN" "buyxm1014" //Buy XM1014
+alias "buyecorifle" "buy famas"
+bind "KP_PGDN" "buyecorifle" //Buy Famas/galil
 alias "buyssg08" "buy ssg08"
 bind "KP_UPARROW" "buyssg08" //Buy SSG08
 alias "buym4a1" "buy m4a1-s"
@@ -358,37 +369,25 @@ alias "-jumpthrow" "-jump;-duck"
 // EVERYTHING UNDER THIS LINE NEEDS TO BE TOGETHER OR THE SCRIPTS WILL NOT WORK
 
 // ***********  **********
+// ALT Binds & Buy & Drop Binds
 //How to pick up a specific grenade (2 = HE) (Q = FLASH) (1 = SMOKE) (E = FIRE) (3 = DECOY)
-alias altE1 "use weapon_flashbang"
-alias altE "bind q altE1" //IF YOU USE FRENCH KEYBOARD, CHANGE "Q" TO "A"
-alias alt11 "use weapon_smokegrenade"
-alias alt1 bind 1 alt11
-alias alt22 "use weapon_molotov; use weapon_incgrenade"
-alias alt2 bind e alt22
-alias alt33 "use weapon_hegrenade"
-alias alt3 bind 2 alt33
-alias alt44 "use weapon_decoy"
-alias alt4 bind 3 alt44
-alias alt55 "buyanddrop"
-alias alt5 bind g alt55
-alias alt66 "disablevoice"
-alias alt6 bind mouse4 alt66 //CHANGE THE "V" TO YOUR VOICE KEY
-alias defE "bind "f" "+radar +lookatweapon"""
-alias def1 "bind 1 slot1"
-alias def2 "bind 2 slot2"
-alias def3 "bind e lastinv" //IF YOU USE FRENCH KEYBOARD, CHANGE "Q" TO "A"
-alias def4 "bind 3 slot3"
-alias def5 "bind g drop"
-alias def6 "bind k +voicerecord //CHANGE THE "V" TO YOUR VOICE KEY
-alias +altbinds "alte; alt1; alt2; alt3; alt4; alt5; alt6"
-alias -altbinds "defE; def1; def2; def3; def4; def5; def6"
-bind alt +altbinds
-// BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
+alias "smoke" "use weapon_smokegrenade"
+alias "flash" "use weapon_flashbang"
+alias "fire" "use weapon_molotov; use weapon_incgrenade"
+alias "nade" "use weapon_hegrenade"
+alias "usedecoy" "use weapon_decoy"
 
-// ***********  **********
-// Buy and drop
-alias "buyanddrop" "buy ak47; buy m4a1; buy m4a1_silencer; slot1; drop"
-// This script is combined with the extra hotkeys for grenades.
+alias "droprifle" "buy m4a1; use weapon_m4a1; say_team Dropping Rifle; drop"
+alias "buym4a1" "buy m4a1"
+alias "dropawp" "buy awp; use weapon_awp; say_team Dropping AWP; drop"
+alias "dropump" "buy ump45; use weapon_ump45; say_team Dropping UMP; drop"
+alias "buyump" "buy ump45"
+alias "dropdeagle" "buy deagle; use weapon_deagle; say_team Dropping Deagle; drop"
+alias "dropecorifle" "buy famas; use weapon_famas; say_team Dropping Eco Rifle; drop"
+
+alias +altbinds "bind 1 smoke; bind q flash; bind e fire; bind 3 usedecoy; bind 2 nade; bind KP_HOME droprifle; bind KP_PGUP dropawp; bind KP_END dropump; bind KP_DOWNARROW dropdeagle; bind KP_PGDN dropecorifle"
+alias -altbinds "bind 1 slot1; bind q +use; bind e lastinv; bind 3 slot3; bind 2 slot2; bind KP_HOME buym4a1; bind KP_PGUP buyawp; bind KP_END buyump; bind KP_DOWNARROW buydeagle; bind KP_PGDN buyecorifle"
+bind alt +altbinds
 
 // ***********  **********
 // Disable in-game voice + no rebinds needed
