Update Console Binds Output and added Quick Inventory Bind

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -42,9 +42,9 @@ echo | KP_MINUS = Drop C4 with team chat notification
 echo | KP_PLUS = FULL AWP Buy
 echo | KP_ENTER = Buy Standard Nades
 echo | KP_INS = Buy Standard Gear
-echo | KP_END = Buy Mac-10
+echo | KP_END = Buy UMP-45
 echo | KP_DOWNARROW = Buy Deagle `
-echo | KP_PGDN = Buy XM Shotgun
+echo | KP_PGDN = Buy Eco Rifle (Famas/Galil)
 echo | KP_5 = Buy SG 
 echo | KP_HOME = Buy AK/m4 
 echo | KP_UPARROW = Buy SSG
@@ -56,6 +56,11 @@ echo | e = incindeary
 echo | 1 = Smoke
 echo | 2 = HE Grenade
 echo | 3 = Decoy
+echo | KP_7 = Drop Rifle
+echo | KP_9 = Drop AWP
+echo | KP_3 = Drop Eco Rifle (Famas/Galil)
+echo | KP_2 = Drop Deagle
+echo | KP_1 = Drop UMP-45
 echo | 
 echo | Features:
 echo | Easy to edit (Mostly)
@@ -104,6 +109,8 @@ bind "f5" "displaydamage"
 bind "MOUSE5" "+jumpthrow"
 //Radio Wheel Key
 bind "z" "+radialradio"
+//Radial Weapon Menu Bind
+bind "x" "+quickinv"
 
 
 // ************  **********
