Added Extra Comments

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -82,12 +82,12 @@ exec crosshair
 
 // ************  **********
 // Common Settings and Binds
-cl_autowepswitch "0"
-sensitivity 0.66
-bind "k" "+voicerecord"
-fps_max "150"
-fps_max_menu "140"
-cl_join_advertise 2
+cl_autowepswitch "0" // Disables weapon switch on pickup
+sensitivity 0.66 //Change to your ingame sensitivity
+bind "k" "+voicerecord" // Change to your push to talk key
+fps_max "240"
+fps_max_menu "144.15" // Can help with load Times
+cl_join_advertise 2 //Lets Friends join you in community servers
 
 //Change L to Key of Choice to clear decals 
 bind l "r_cleardecals" 
@@ -115,6 +115,7 @@ bind "x" "+quickinv"
 
 // ************  **********
 //Crosshair, Viewmodel, etc Settings
+// DELETE THIS IF YOU DONT WANT MY VIEWMODEL & CROSSHAIR EVERYTIME YOU LOAD THIS
 cl_crosshair_drawoutline "1"
 cl_crosshair_dynamic_maxdist_splitratio "0.35"
 cl_crosshair_dynamic_splitalpha_innermod "1"
