Made ad not so long

--- a/csgo/cfg/chat.cfg
+++ b/csgo/cfg/chat.cfg
@@ -29,7 +29,7 @@ bind "f8" "t3"
 echo |
 echo |-----------------------------------
 echo | Loki's Chat Menu Loaded
-say | Loki's Chat Menu Loaded | DL www.gamebanana.com/scripts/10499 |
+say | Loki's Chat Menu Loaded | DL www.gamebanana.com/scripts/10664 |
 echo |
 echo | Binds:
 echo |
@@ -123,8 +123,8 @@ bind rightarrow rekt
 //Config Pack Download
 //
 alias pack "pack1"
-alias pack1 "say Download Loki's Config Pack. Includes: Loki's Autoexec, Sensitivity Menu, Chat Menu, Crosshair Menu, Practice Config, COD Config, BHOP Config,; alias pack pack2"
-alias pack2 "say and -Falolout's PRAC SCRIPT, Snake1001's Adv Surf Config. Chat menu has 6.7K+ views and the crosshair menu has 7.4K+. Comment what else I should add/make.; alias pack pack3"
+alias pack1 "say Download Loki's Config Pack. Includes: Loki's Autoexec, Sensitivity Menu, Chat Menu, Crosshair Menu, Practice Config,; alias pack pack2"
+alias pack2 "say Chat menu has 8.3K+ views and the crosshair menu has 9K+ and was a featured item, The AutoExec has 5.5K+ Views. Comment what else I should add/make.; alias pack pack3"
 alias pack3 "say Download here: www.gamebanana.com/scripts/10664; alias pack pack4"
 alias pack4 "say This is not a hack it is part of the chat config which is a bunch of in game commands in a file. It is 100% Competitive legal.; alias pack pack1"
 bind uparrow pack
