--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -16,7 +16,9 @@ alias "l.surf" "exec surf"
 alias "l.sens" "exec sensitivitymenu"
 alias "l.compprac" "exec ComprehensivePractice"
 alias "l.cod" "exec cod"
+alias "l.help" "exec lokihelp"
 echo | L.Main - Reexecute Autoexec
+echo | L.Help - Show's help text for all of Loki's Scripts in Config Pack
 echo | L.Chat - Loki's Chat Menu
 echo | L.Cross - Loki's Crosshair Menu
 echo | L.Prac - Loki's Private Match Practice Config
@@ -27,8 +29,10 @@ echo | L.CompPrac - -Falolout's COMPREHENSIVE PRACTICE SCRIPT
 echo | showcrosshair - Shows Crosshair Settings in Console
 echo | showviewmodel - Shows Viewmodel Settings in Console
 echo | 
-echo | Binds:
+echo | Binds (also a cmd):
 echo | Z = Radial Radio Key (Scroll to change wheels)
+echo | X = Radial Weapon Menu
+echo | C = Crosshair Menu
 echo | mouse5 = Jumpthrow
 echo | L = Clear decals
 echo | K = Push to Talk Keybind
@@ -50,17 +54,28 @@ echo | KP_HOME = Buy AK/m4
 echo | KP_UPARROW = Buy SSG
 echo | KP_PGUP = Buy AWP
 echo |
-echo | Alt Binds (alt + key)
+echo | Alt Binds (ALT + key)
+echo | Alt = Nade Lineup Key
 echo | q = flashbang
 echo | e = incindeary
 echo | 1 = Smoke
 echo | 2 = HE Grenade
 echo | 3 = Decoy
+echo | Z = Commands Wheel
+echo | C = Crosshair Color Menu
 echo | KP_7 = Drop Rifle
 echo | KP_9 = Drop AWP
 echo | KP_3 = Drop Eco Rifle (Famas/Galil)
 echo | KP_2 = Drop Deagle
 echo | KP_1 = Drop UMP-45
+echo |
+echo | Shift Binds (SHIFT + Key)
+echo | Shift = Volume Up .15 & Voice Volume Down .2
+echo | C = Menu
+echo |
+echo | Ctrl Binds (CTRL + Key)
+echo | Ctrl = Volume up .2 & Voice Volume Down .3
+echo | Z = Strategy Wheel
 echo | 
 echo | Features:
 echo | Easy to edit (Mostly)
@@ -108,10 +123,44 @@ bind "f5" "displaydamage"
 //Jumpthrow Key
 bind "MOUSE5" "+jumpthrow"
 //Radio Wheel Key
-bind "z" "+radialradio"
+alias radialradio bind "z" "+radialradio2"
 //Radial Weapon Menu Bind
 bind "x" "+quickinv"
+//Crosshair Menu
+bind "c" "radio1"
 
+// ***********  **********
+// ALT Binds & Buy & Drop Binds
+//How to pick up a specific grenade (2 = HE) (Q = FLASH) (1 = SMOKE) (E = FIRE) (3 = DECOY)
+alias "smoke" "use weapon_smokegrenade"
+alias "flash" "use weapon_flashbang"
+alias "fire" "use weapon_molotov; use weapon_incgrenade"
+alias "nade" "use weapon_hegrenade"
+alias "usedecoy" "use weapon_decoy"
+
+alias "droprifle" "slot1; drop; buy m4a1; use weapon_m4a1; say_team Dropping Rifle; drop"
+alias "buym4a1" "buy m4a1"
+alias "dropawp" "slot1; drop; buy awp; use weapon_awp; say_team Dropping AWP; drop"
+alias "dropump" "buy slot1; drop; ump45; use weapon_ump45; say_team Dropping UMP; drop"
+alias "buyump" "buy ump45"
+alias "dropdeagle" "slot2; drop; buy deagle; use weapon_deagle; say_team Dropping Deagle; drop"
+alias "dropecorifle" "slot1; drop; buy famas; use weapon_famas; say_team Dropping Eco Rifle; drop"
+
+alias +altbinds "bind z +radialradio3; bind 1 smoke; bind q flash; bind e fire; bind 3 usedecoy; bind 2 nade; bind KP_HOME droprifle; bind KP_PGUP dropawp; bind KP_END dropump; bind KP_DOWNARROW dropdeagle; bind KP_PGDN dropecorifle; bind c radio3; +crosshairsmoke"
+alias -altbinds "radialradio; bind 1 slot1; bind q +use; bind e lastinv; bind 3 slot3; bind 2 slot2; bind KP_HOME buym4a1; bind KP_PGUP buyawp; bind KP_END buyump; bind KP_DOWNARROW buydeagle; bind KP_PGDN buyecorifle; bind c radio1; -crosshairsmoke"
+bind alt +altbinds
+
+// ***********  **********
+// SHIFT Binds
+alias +shiftbinds "bind c radio2; incrementvar voice_scale 0 1 -0.2; incrementvar volume 0 1 0.15; +speed"
+alias -shiftbinds "bind c radio1; incrementvar voice_scale 0 1 0.2; incrementvar volume 0 1 -0.15; -speed"
+bind shift +shiftbinds
+
+// ***********  **********
+// CTRL Binds
+alias +ctrlbinds "bind z +radialradio; incrementvar volume 0 1 0.2; incrementvar voice_scale 0 1 -0.3; +duck"
+alias -ctrlbinds "radialradio; incrementvar volume 0 1 -0.2; incrementvar voice_scale 0 1 0.3; -duck"
+bind ctrl +ctrlbinds
 
 // ************  **********
 //Crosshair, Viewmodel, etc Settings
@@ -170,10 +219,40 @@ cl_radar_square_with_scoreboard "1"
 // ************  **********
 // New Radio Wheel Binds
 
-cl_radial_radio_tab_2_text_1 Dropped Deagle";buy deagle;use weapon_deagle;drop;cheer"
-cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45;use weapon_ump45;drop;cheer"
-cl_radial_radio_tab_2_text_8 Dropped Rifle";buy m4a1; use weapon_m4a4;drop;cheer"
+cl_radial_radio_tab_2_text_1 Dropped Deagle"; buy deagle; use weapon_deagle; drop; cheer"
+cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45; use weapon_ump45; drop; cheer"
+cl_radial_radio_tab_2_text_8 Dropped Rifle"; buy m4a1; use weapon_m4a4; drop; cheer"
+cl_radial_radio_tab_2_text_4 Crosshair Menu Loaded"; crosshaircolormenu"
 
+
+// Aliases
+alias goa playerchatwheel CW.GoA "#Chatwheel_aplan";say_team Go to A Site!
+
+
+// ************  **********
+// Crosshair Color Cycle Script
+alias "colorcrosshair" "colorcrosshair_0"
+alias "colorcrosshair_0" "alias colorcrosshair colorcrosshair_1; cl_crosshaircolor 0; echo **CROSSHAIR IS GREEN**"
+alias "colorcrosshair_1" "alias colorcrosshair colorcrosshair_2; cl_crosshaircolor 1; echo **CROSSHAIR IS RED**"
+alias "colorcrosshair_2" "alias colorcrosshair colorcrosshair_3; cl_crosshaircolor 2; echo **CROSSHAIR IS BLUE**"
+alias "colorcrosshair_3" "alias colorcrosshair colorcrosshair_4; cl_crosshaircolor 3; echo **CROSSHAIR IS YELLOW**"
+alias "colorcrosshair_4" "alias colorcrosshair colorcrosshair_5; cl_crosshaircolor 4; echo **CROSSHAIR IS TURQUOISE**"
+alias "colorcrosshair_5" "alias colorcrosshair colorcrosshair_6; cl_crosshaircolor 5; cl_crosshaircolor_r 0; cl_crosshaircolor_g 0; cl_crosshaircolor_b 0; echo **CROSSHAIR IS BLACK**"
+alias "colorcrosshair_6" "alias colorcrosshair colorcrosshair_7; cl_crosshaircolor 5; cl_crosshaircolor_r 84; cl_crosshaircolor_g 84; cl_crosshaircolor_b 84; echo **CROSSHAIR IS GREY**"
+alias "colorcrosshair_7" "alias colorcrosshair colorcrosshair_8; cl_crosshaircolor 5; cl_crosshaircolor_r 168; cl_crosshaircolor_g 168; cl_crosshaircolor_b 168; echo **CROSSHAIR IS LIGHTGREY**"
+alias "colorcrosshair_8" "alias colorcrosshair colorcrosshair_9; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; echo **CROSSHAIR IS WHITE**"
+alias "colorcrosshair_9" "alias colorcrosshair colorcrosshair_10; cl_crosshaircolor 5; cl_crosshaircolor_r 138; cl_crosshaircolor_g 43; cl_crosshaircolor_b 226; echo **CROSSHAIR IS BLUEPURPLE**"
+alias "colorcrosshair_10" "alias colorcrosshair colorcrosshair_11; cl_crosshaircolor 5; cl_crosshaircolor_r 72; cl_crosshaircolor_g 61; cl_crosshaircolor_b 139; echo **CROSSHAIR IS DARKBLUE**"
+alias "colorcrosshair_11" "alias colorcrosshair colorcrosshair_12; cl_crosshaircolor 5; cl_crosshaircolor_r 0; cl_crosshaircolor_g 78; cl_crosshaircolor_b 138; echo **CROSSHAIR IS SKYBLUE**"
+alias "colorcrosshair_12" "alias colorcrosshair colorcrosshair_13; cl_crosshaircolor 5; cl_crosshaircolor_r 139; cl_crosshaircolor_g 69; cl_crosshaircolor_b 19;  echo **CROSSHAIR IS BROWN**"
+alias "colorcrosshair_13" "alias colorcrosshair colorcrosshair_14; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 165; cl_crosshaircolor_b 0; echo **CROSSHAIR IS ORANGE**"
+alias "colorcrosshair_14" "alias colorcrosshair colorcrosshair_15; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 105; cl_crosshaircolor_b 185; echo **CROSSHAIR IS HOTPINK**"
+alias "colorcrosshair_15" "alias colorcrosshair colorcrosshair_16; cl_crosshaircolor 5; cl_crosshaircolor_r 191; cl_crosshaircolor_g 62; cl_crosshaircolor_b 25; echo **CROSSHAIR IS PURPLE**"
+alias "colorcrosshair_16" "alias colorcrosshair colorcrosshair_17; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 215; cl_crosshaircolor_b 0; echo **CROSSHAIR IS GOLD**"
+alias "colorcrosshair_17" "alias colorcrosshair colorcrosshair_18; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 0; cl_crosshaircolor_b 255; echo **CROSSHAIR IS MAGENTA**"
+alias "colorcrosshair_18" "alias colorcrosshair colorcrosshair_19; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 192; cl_crosshaircolor_b 203; echo **CROSSHAIR IS PINK**"
+alias "colorcrosshair_19" "alias colorcrosshair colorcrosshair_0; cl_crosshaircolor 5; cl_crosshaircolor_r 0; cl_crosshaircolor_g 100; cl_crosshaircolor_b 0; echo **CROSSHAIR IS DARKGREEN**"
+bind "MOUSE4" "colorcrosshair"
 
 // ************  **********
 // scales the HUD depending on what resolution you use, 1 is max.
@@ -241,6 +320,7 @@ net_maxroutable "1200" //Requested max packet size before packets are 'split'
 net_scale "5" //Makes font smaller
 
 // ************  **********
+// Mute Function
 alias "mute" "muteon"
 alias "muteon" "volume 0; alias mute muteoff"
 alias "muteoff" "volume 0.7; alias mute muteon"
@@ -253,6 +333,8 @@ muteoff
 cl_disablefreezecam 1
 //Radar scale
 cl_radar_scale "0.6"
+alias "binds" "key_listboundkeys"
+alias "radialhelp" "developer 2; con_filter_text_out Player; echo | Radial Menu Binds"
 
 // ************  **********
 //Better Audio Settings
@@ -375,27 +457,6 @@ alias "+jumpthrow" "+jump;-attack;+duck"
 alias "-jumpthrow" "-jump;-duck"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 // EVERYTHING UNDER THIS LINE NEEDS TO BE TOGETHER OR THE SCRIPTS WILL NOT WORK
-
-// ***********  **********
-// ALT Binds & Buy & Drop Binds
-//How to pick up a specific grenade (2 = HE) (Q = FLASH) (1 = SMOKE) (E = FIRE) (3 = DECOY)
-alias "smoke" "use weapon_smokegrenade"
-alias "flash" "use weapon_flashbang"
-alias "fire" "use weapon_molotov; use weapon_incgrenade"
-alias "nade" "use weapon_hegrenade"
-alias "usedecoy" "use weapon_decoy"
-
-alias "droprifle" "buy m4a1; use weapon_m4a1; say_team Dropping Rifle; drop"
-alias "buym4a1" "buy m4a1"
-alias "dropawp" "buy awp; use weapon_awp; say_team Dropping AWP; drop"
-alias "dropump" "buy ump45; use weapon_ump45; say_team Dropping UMP; drop"
-alias "buyump" "buy ump45"
-alias "dropdeagle" "buy deagle; use weapon_deagle; say_team Dropping Deagle; drop"
-alias "dropecorifle" "buy famas; use weapon_famas; say_team Dropping Eco Rifle; drop"
-
-alias +altbinds "bind 1 smoke; bind q flash; bind e fire; bind 3 usedecoy; bind 2 nade; bind KP_HOME droprifle; bind KP_PGUP dropawp; bind KP_END dropump; bind KP_DOWNARROW dropdeagle; bind KP_PGDN dropecorifle"
-alias -altbinds "bind 1 slot1; bind q +use; bind e lastinv; bind 3 slot3; bind 2 slot2; bind KP_HOME buym4a1; bind KP_PGUP buyawp; bind KP_END buyump; bind KP_DOWNARROW buydeagle; bind KP_PGDN buyecorifle"
-bind alt +altbinds
 
 // ***********  **********
 // Disable in-game voice + no rebinds needed
