--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -139,7 +139,7 @@ alias "nade" "use weapon_hegrenade"
 alias "usedecoy" "use weapon_decoy"
 
 alias "droprifle" "slot1; drop; buy m4a1; use weapon_m4a1; say_team Dropping Rifle; drop"
-alias "buym4a1" "buy m4a1"
+//alias "buyak" "buy ak47"
 alias "dropawp" "slot1; drop; buy awp; use weapon_awp; say_team Dropping AWP; drop"
 alias "dropump" "buy slot1; drop; ump45; use weapon_ump45; say_team Dropping UMP; drop"
 alias "buyump" "buy ump45"
@@ -221,7 +221,7 @@ cl_radar_square_with_scoreboard "1"
 
 cl_radial_radio_tab_2_text_1 Dropped Deagle"; buy deagle; use weapon_deagle; drop; cheer"
 cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45; use weapon_ump45; drop; cheer"
-cl_radial_radio_tab_2_text_8 Dropped Rifle"; buy m4a1; use weapon_m4a4; drop; cheer"
+cl_radial_radio_tab_2_text_8 Dropped Rifle"; buy m4a1; use weapon_m4a1; drop; cheer"
 cl_radial_radio_tab_2_text_4 Crosshair Menu Loaded"; crosshaircolormenu"
 
 
@@ -379,7 +379,7 @@ alias "buyecorifle" "buy famas"
 bind "KP_PGDN" "buyecorifle" //Buy Famas/galil
 alias "buyssg08" "buy ssg08"
 bind "KP_UPARROW" "buyssg08" //Buy SSG08
-alias "buym4a1" "buy m4a1-s"
+alias "buym4a1" "buy m4a1_silencer"
 bind "KP_HOME" "buy m4a1;buy ak47"
 bind "kp_5" "buy sg553"
 bind "kp_plus" "buy awp; buy deagle; buy vesthelm; buy taser 34; buy defuser; buy molotov; buy incgrenade; buy flashbang; buy flashbang; buy smokegrenade;"
