Made Binds easier to edit/Fixed some Syntaxing

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -105,15 +105,15 @@ fps_max_menu "144.15" // Can help with load Times
 cl_join_advertise 2 //Lets Friends join you in community servers
 
 //Change L to Key of Choice to clear decals 
-bind l "r_cleardecals" 
+bind "l" "r_cleardecals" 
 //Change f4 to Key of Choice to toggle mute all audio
-bind "f4" mute
+bind "f4" "mute"
 //Change Gun Position [Left/Right]
 BindToggle "home" "cl_righthand"
 //Bind this to a key (this will turn on & off the clutch)
-bind "F2" clutch
+bind "F2" "clutch"
 //Change f to whatever you want your inspect weapon and use key to be. Will zoom in radar as well
-bind "f" "+radar;+lookatweapon"
+bind "f" "+radar;+lookatweapon;+use;r_cleardecals"
 //change tab to scoreboard key
 bind "TAB" "+scorenet"
 //Display Damage Key
@@ -122,14 +122,43 @@ bind "f5" "displaydamage"
 //bind "mouse4" "+crosshairsmoke"
 //Jumpthrow Key
 bind "MOUSE5" "+jumpthrow"
-//Radio Wheel Key
+//Radio Wheel Binds (change Z on all 3 for modifier binds to work.)
 alias radialradio bind "z" "+radialradio2"
+alias altradialradio bind "z" "+radialradio3"
+alias ctrlradialradio bind "z" "+radialradio"
+//Radio Binds
+alias radiobind bind "c" "radio1"
+alias altradiobind bind "c" "radio3"
+alias shiftradiobind bind "c" "radio2"
 //Radial Weapon Menu Bind
 bind "x" "+quickinv"
 //Crosshair Menu
-bind "c" "radio1"
+bind "c" "radio1; say_team Opening Loki's InGame Crosshair Selection Menu | DL: www.github.com/TheFantasticLoki/Loki-s-Auto-Exec-Pack |"
+//Crosshair Color Switcher Bind
+bind "MOUSE4" "colorcrosshair"
+//Drop C4 Bind
+bind "KP_MINUS" "dropc4" //Drop C4
 
-// ***********  **********
+//Alt Binds
+
+//Smoke Bind
+alias altsmoke bind "1" "smoke"
+alias revsmoke bind "1" "slot1" // Change this to whatever key you change smoke to, Change slot1 to whatever the key is bound to, check with binds command.
+//Flash Bind
+alias altflash bind "q" "flash"
+alias revflash bind "1" "+use" // Change this to whatever key you change flash to, Change +use to whatever the key is bound to, check with binds command.
+//Fire Grenade Bind
+alias altfire bind "e" "fire"
+alias revfire bind "e" "lastinv" // Change this to whatever key you change fire to, Change lastinv to whatever the key is bound to, check with binds command.
+//Decoy Bind
+alias altdecoy bind "3" "usedecoy"
+alias revdecoy bind "3" "slot3" // You should get this by now.
+//HE Grenade Bind
+alias altnade bind "2" "nade"
+alias revnade bind "2" "slot2"
+
+
+// ************  **********
 // ALT Binds & Buy & Drop Binds
 //How to pick up a specific grenade (2 = HE) (Q = FLASH) (1 = SMOKE) (E = FIRE) (3 = DECOY)
 alias "smoke" "use weapon_smokegrenade"
@@ -146,21 +175,42 @@ alias "buyump" "buy ump45"
 alias "dropdeagle" "slot2; drop; buy deagle; use weapon_deagle; say_team Dropping Deagle; drop"
 alias "dropecorifle" "slot1; drop; buy famas; use weapon_famas; say_team Dropping Eco Rifle; drop"
 
-alias +altbinds "bind z +radialradio3; bind 1 smoke; bind q flash; bind e fire; bind 3 usedecoy; bind 2 nade; bind KP_HOME droprifle; bind KP_PGUP dropawp; bind KP_END dropump; bind KP_DOWNARROW dropdeagle; bind KP_PGDN dropecorifle; bind c radio3; +crosshairsmoke"
-alias -altbinds "radialradio; bind 1 slot1; bind q +use; bind e lastinv; bind 3 slot3; bind 2 slot2; bind KP_HOME buym4a1; bind KP_PGUP buyawp; bind KP_END buyump; bind KP_DOWNARROW buydeagle; bind KP_PGDN buyecorifle; bind c radio1; -crosshairsmoke"
+alias +altbinds "altradialradio; altsmoke; altflash; altfire; altdecoy; altnade; bind KP_HOME droprifle; bind KP_PGUP dropawp; bind KP_END dropump; bind KP_DOWNARROW dropdeagle; bind KP_PGDN dropecorifle; altradiobind; +crosshairsmoke"
+alias -altbinds "radialradio; revsmoke; revflash; revfire; revdecoy; revnade; bind KP_HOME buym4a1; bind KP_PGUP buyawp; bind KP_END buyump; bind KP_DOWNARROW buydeagle; bind KP_PGDN buyecorifle; radiobind; -crosshairsmoke"
 bind alt +altbinds
 
-// ***********  **********
+// ************  **********
 // SHIFT Binds
-alias +shiftbinds "bind c radio2; incrementvar voice_scale 0 1 -0.2; incrementvar volume 0 1 0.15; +speed"
-alias -shiftbinds "bind c radio1; incrementvar voice_scale 0 1 0.2; incrementvar volume 0 1 -0.15; -speed"
+alias +shiftbinds "shiftradiobind; incrementvar voice_scale 0 1 -0.2; incrementvar volume 0 1 0.15; +speed; +radar"
+alias -shiftbinds "radiobind; incrementvar voice_scale 0 1 0.2; incrementvar volume 0 1 -0.15; -speed; -radar"
 bind shift +shiftbinds
 
-// ***********  **********
+// ************  **********
 // CTRL Binds
-alias +ctrlbinds "bind z +radialradio; incrementvar volume 0 1 0.2; incrementvar voice_scale 0 1 -0.3; +duck"
+alias +ctrlbinds "ctrlradialradio; incrementvar volume 0 1 0.2; incrementvar voice_scale 0 1 -0.3; +duck"
 alias -ctrlbinds "radialradio; incrementvar volume 0 1 -0.2; incrementvar voice_scale 0 1 0.3; -duck"
 bind ctrl +ctrlbinds
+
+// ************  **********
+//Buy Keys
+// Guide to setting these up: https://steamcommunity.com/sharedfiles/filedetails/?id=372204268
+alias "gengrenades" "buy flashbang;buy smokegrenade;buy molotov;buy flashbang"
+bind "KP_ENTER" "gengrenades" //Standard Grenades
+alias "buyawp" "buy awp"
+bind "KP_PGUP" "buyawp" //AWP
+alias "buygear" "buy vesthelm;buy vest;buy defuser"
+bind "KP_INS" "buygear" //Buy Standard Gear
+bind "kp_end" "buy ump45"
+alias "buydeagle" "buy deagle"
+bind "KP_DOWNARROW" "buydeagle" //Buy Deagle
+alias "buyecorifle" "buy famas"
+bind "KP_PGDN" "buyecorifle" //Buy Famas/galil
+alias "buyssg08" "buy ssg08"
+bind "KP_UPARROW" "buyssg08" //Buy SSG08
+alias "buym4a1" "buy m4a1_silencer"
+bind "KP_HOME" "buy m4a1;buy ak47"
+bind "kp_5" "buy sg553"
+bind "kp_plus" "buy awp; buy deagle; buy vesthelm; buy taser 34; buy defuser; buy molotov; buy incgrenade; buy flashbang; buy flashbang; buy smokegrenade;"
 
 // ************  **********
 //Crosshair, Viewmodel, etc Settings
@@ -222,11 +272,9 @@ cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab_2_text_1 Dropped Deagle"; buy deagle; use weapon_deagle; drop; cheer"
 cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45; use weapon_ump45; drop; cheer"
 cl_radial_radio_tab_2_text_8 Dropped Rifle"; buy m4a1; use weapon_m4a1; drop; cheer"
-cl_radial_radio_tab_2_text_4 Crosshair Menu Loaded"; crosshaircolormenu"
-
-
-// Aliases
-alias goa playerchatwheel CW.GoA "#Chatwheel_aplan";say_team Go to A Site!
+cl_radial_radio_tab_2_text_7 #Chatwheel_holdposisiton
+cl_radial_radio_tab_2_text_3 #Chatwheel_fallback
+cl_radial_radio_tab_2_text_5 Damage Display Toggled"; displaydamage
 
 
 // ************  **********
@@ -252,7 +300,6 @@ alias "colorcrosshair_16" "alias colorcrosshair colorcrosshair_17; cl_crosshairc
 alias "colorcrosshair_17" "alias colorcrosshair colorcrosshair_18; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 0; cl_crosshaircolor_b 255; echo **CROSSHAIR IS MAGENTA**"
 alias "colorcrosshair_18" "alias colorcrosshair colorcrosshair_19; cl_crosshaircolor 5; cl_crosshaircolor_r 255; cl_crosshaircolor_g 192; cl_crosshaircolor_b 203; echo **CROSSHAIR IS PINK**"
 alias "colorcrosshair_19" "alias colorcrosshair colorcrosshair_0; cl_crosshaircolor 5; cl_crosshaircolor_r 0; cl_crosshaircolor_g 100; cl_crosshaircolor_b 0; echo **CROSSHAIR IS DARKGREEN**"
-bind "MOUSE4" "colorcrosshair"
 
 // ************  **********
 // scales the HUD depending on what resolution you use, 1 is max.
@@ -358,39 +405,17 @@ alias "clutchsoundon" "volume 1; snd_menumusic_volume 0; snd_deathcamera_volume 
 alias "clutchsoundoff" "volume 0.7; snd_menumusic_volume 0; snd_deathcamera_volume 0; snd_mapobjective_volume 0; snd_roundend_volume 0; snd_roundstart_volume 0; snd_tensecondwarning_volume 0"
 //Skazzy3's epic clutch bind - END '
 
-// ***********  **********
+// ************  **********
 //Drop C4 Keybind
 alias "dropc4" "use weapon_c4;drop;playerchatwheel CW.DroppedBomb #Chatwheel_droppedbomb"
-bind "KP_MINUS" "dropc4" //Drop C4
 
-// ***********  **********
-//Buy Keys
-// Guide to setting these up: https://steamcommunity.com/sharedfiles/filedetails/?id=372204268
-alias "gengrenades" "buy flashbang;buy smokegrenade;buy molotov;buy flashbang"
-bind "KP_ENTER" "gengrenades" //Standard Grenades
-alias "buyawp" "buy awp"
-bind "KP_PGUP" "buyawp" //AWP
-alias "buygear" "buy vesthelm;buy vest;buy defuser"
-bind "KP_INS" "buygear" //Buy Standard Gear
-bind "kp_end" "buy ump45"
-alias "buydeagle" "buy deagle"
-bind "KP_DOWNARROW" "buydeagle" //Buy Deagle
-alias "buyecorifle" "buy famas"
-bind "KP_PGDN" "buyecorifle" //Buy Famas/galil
-alias "buyssg08" "buy ssg08"
-bind "KP_UPARROW" "buyssg08" //Buy SSG08
-alias "buym4a1" "buy m4a1_silencer"
-bind "KP_HOME" "buy m4a1;buy ak47"
-bind "kp_5" "buy sg553"
-bind "kp_plus" "buy awp; buy deagle; buy vesthelm; buy taser 34; buy defuser; buy molotov; buy incgrenade; buy flashbang; buy flashbang; buy smokegrenade;"
-
-// ***********  **********
+// ************  **********
 //Increase Decrease Radar Size
 alias "+radar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.90"
 alias "-radar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.60"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 //Show netgraph when checking scoreboard
 net_graph "1"
 net_graphheight "9999"
@@ -398,14 +423,14 @@ alias "+scorenet" "+showscores; net_graphheight 0"
 alias "-scorenet" "-showscores; net_graphheight 9999"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 //Display Damage with Switch Script
 alias displaydamage "displaydamage_on"
 alias displaydamage_on "con_filter_text Damage Given; con_filter_text_out Player; con_filter_enable 2;  developer 1; playvol buttons\blip1 0.5; alias displaydamage "displaydamage_off""
 alias displaydamage_off "con_filter_enable 0; developer 0; playvol buttons\blip2 0.5; alias displaydamage "displaydamage_on""
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 //Show crosshair Settings
 alias "a1" clear
 alias "a2" echo "*********************************************";
@@ -424,7 +449,7 @@ alias "showcrosshair" "a1;a2;a3;a4;a5;a6;a7;a8;a9;a10;a11;a12;a13"
 //bind ins "showcrosshair"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 //Show viewmodel Settings
 alias "b1" clear
 alias "b2" echo "*********************************************";
@@ -443,7 +468,7 @@ alias "showviewmodel" "b1;b2;b3;b4;b5;b6;b7;b8;b9;b10;b11;b12;b13"
 //bind del "showviewmodel"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 //Show Help Lines
 alias "-crosshairsmoke" "cl_crosshairsize 2;cl_crosshairdot 0;cl_crosshairgap -2"
 alias "+crosshairsmoke" "cl_crosshairsize 1337;cl_crosshairdot 1;cl_crosshairgap 10"
@@ -451,20 +476,20 @@ alias "+crosshairsmoke" "cl_crosshairsize 1337;cl_crosshairdot 1;cl_crosshairgap
 // Don’t change the second line.
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
-// ***********  **********
+// ************  **********
 // Jump Throw Script + Jump and Duck
 alias "+jumpthrow" "+jump;-attack;+duck"
 alias "-jumpthrow" "-jump;-duck"
 // BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 // EVERYTHING UNDER THIS LINE NEEDS TO BE TOGETHER OR THE SCRIPTS WILL NOT WORK
 
-// ***********  **********
+// ************  **********
 // Disable in-game voice + no rebinds needed
 alias "disablevoice" "voice_chat"
 alias "voice_chat" "chat_1"
 alias "chat_1" "voice_enable 1; playvol buttons\blip1 0.5; alias voice_chat chat_0"
 alias "chat_0" "voice_enable 0; playvol buttons\blip2 0.5; alias voice_chat chat_1"
-// ************************
+
 
 // ********** ************
 // Map and Weapon Aliases
@@ -483,6 +508,7 @@ alias "c4" "give weapon_c4"
 alias "knife" "weapon_knife"
 // Tools
 alias "taser" "give weapon_taser"
+alias "zeus" "give weapon_taser"
 alias "healthshot" "give weapon_healthshot"
 // Nades
 alias "decoy" "give weapon_decoy"
