Fixed spelling error and wrong keybind

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -146,7 +146,7 @@ alias altsmoke bind "1" "smoke"
 alias revsmoke bind "1" "slot1" // Change this to whatever key you change smoke to, Change slot1 to whatever the key is bound to, check with binds command.
 //Flash Bind
 alias altflash bind "q" "flash"
-alias revflash bind "1" "+use" // Change this to whatever key you change flash to, Change +use to whatever the key is bound to, check with binds command.
+alias revflash bind "q" "+use" // Change this to whatever key you change flash to, Change +use to whatever the key is bound to, check with binds command.
 //Fire Grenade Bind
 alias altfire bind "e" "fire"
 alias revfire bind "e" "lastinv" // Change this to whatever key you change fire to, Change lastinv to whatever the key is bound to, check with binds command.
@@ -272,7 +272,7 @@ cl_radar_square_with_scoreboard "1"
 cl_radial_radio_tab_2_text_1 Dropped Deagle"; buy deagle; use weapon_deagle; drop; cheer"
 cl_radial_radio_tab_2_text_2 Dropped SMG"; buy ump45; use weapon_ump45; drop; cheer"
 cl_radial_radio_tab_2_text_8 Dropped Rifle"; buy m4a1; use weapon_m4a1; drop; cheer"
-cl_radial_radio_tab_2_text_7 #Chatwheel_holdposisiton
+cl_radial_radio_tab_2_text_7 #Chatwheel_holdposition
 cl_radial_radio_tab_2_text_3 #Chatwheel_fallback
 cl_radial_radio_tab_2_text_5 Damage Display Toggled"; displaydamage
 
