Made my Crosshair easy to disable.

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -214,57 +214,60 @@ bind "kp_plus" "buy awp; buy deagle; buy vesthelm; buy taser 34; buy defuser; bu
 
 // ************  **********
 //Crosshair, Viewmodel, etc Settings
-// DELETE THIS IF YOU DONT WANT MY VIEWMODEL & CROSSHAIR EVERYTIME YOU LOAD THIS
-cl_crosshair_drawoutline "1"
-cl_crosshair_dynamic_maxdist_splitratio "0.35"
-cl_crosshair_dynamic_splitalpha_innermod "1"
-cl_crosshair_dynamic_splitalpha_outermod "0.5"
-cl_crosshair_dynamic_splitdist "7"
-cl_crosshair_friendly_warning "1"
-cl_crosshair_outlinethickness "1.000000"
-cl_crosshair_sniper_show_normal_inaccuracy "0"
-cl_crosshair_sniper_width "1"
-cl_crosshair_t "0"
-cl_crosshairalpha "255"
-cl_crosshaircolor "5"
-cl_crosshaircolor_b "100"
-cl_crosshaircolor_g "220"
-cl_crosshaircolor_r "0"
-cl_crosshairdot "0"
-cl_crosshairgap "-3"
-cl_crosshairgap_useweaponvalue "0"
-cl_crosshairsize "2"
-cl_crosshairstyle "4"
-cl_crosshairthickness "0"
-cl_crosshairusealpha "1"
-cl_fixedcrosshairgap "3"
-cl_viewmodel_shift_left_amt "0"
-cl_viewmodel_shift_right_amt "0"
-viewmodel_fov "60"
-viewmodel_offset_x "1"
-viewmodel_offset_y "1"
-viewmodel_offset_z "-1"
-viewmodel_presetpos "1"
-viewmodel_recoil "1.0"
-cl_bob_lower_amt "0"
-cl_bobamt_lat "0.1"
-cl_bobamt_vert "0.1"
-cl_bobcycle "0.98"
-cl_hud_background_alpha "0.5"
-cl_hud_bomb_under_radar "1"
-cl_hud_color "0"
-cl_hud_healthammo_style "0"
-cl_hud_playercount_pos "0"
-cl_hud_playercount_showcount "0"
-cl_hud_radar_scale "1"
-hud_scaling "0.800932"
-hud_showtargetid "1"
-cl_righthand "1.000000"
-cl_color "2"
-cl_radar_always_centered "0"
-cl_radar_icon_scale_min "0.6"
-cl_radar_rotate "1"
-cl_radar_square_with_scoreboard "1"
+alias c1 cl_crosshair_drawoutline "1"
+alias c2 cl_crosshair_dynamic_maxdist_splitratio "0.35"
+alias c3 cl_crosshair_dynamic_splitalpha_innermod "1"
+alias c4 cl_crosshair_dynamic_splitalpha_outermod "0.5"
+alias c5 cl_crosshair_dynamic_splitdist "7"
+alias c6 cl_crosshair_friendly_warning "1"
+alias c7 cl_crosshair_outlinethickness "1.000000"
+alias c8 cl_crosshair_sniper_show_normal_inaccuracy "0"
+alias c9 cl_crosshair_sniper_width "1"
+alias c10 cl_crosshair_t "0"
+alias c11 cl_crosshairalpha "255"
+alias c12 cl_crosshaircolor "5"
+alias c13 cl_crosshaircolor_b "100"
+alias c14 cl_crosshaircolor_g "220"
+alias c15 cl_crosshaircolor_r "0"
+alias c16 cl_crosshairdot "0"
+alias c17 cl_crosshairgap "-3"
+alias c18 cl_crosshairgap_useweaponvalue "0"
+alias c19 cl_crosshairsize "2"
+alias c20 cl_crosshairstyle "4"
+alias c21 cl_crosshairthickness "0"
+alias c22 cl_crosshairusealpha "1"
+alias c23 cl_fixedcrosshairgap "3"
+alias c24 cl_viewmodel_shift_left_amt "0"
+alias c25 cl_viewmodel_shift_right_amt "0"
+alias c26 viewmodel_fov "60"
+alias c27 viewmodel_offset_x "1"
+alias c28 viewmodel_offset_y "1"
+alias c29 viewmodel_offset_z "-1"
+alias c30 viewmodel_presetpos "1"
+alias c31 viewmodel_recoil "1.0"
+alias c32 cl_bob_lower_amt "0"
+alias c33 cl_bobamt_lat "0.1"
+alias c34 cl_bobamt_vert "0.1"
+alias c35 cl_bobcycle "0.98"
+alias c36 cl_hud_background_alpha "0.5"
+alias c37 cl_hud_bomb_under_radar "1"
+alias c38 cl_hud_color "0"
+alias c39 cl_hud_healthammo_style "0"
+alias c40 cl_hud_playercount_pos "0"
+alias c41 cl_hud_playercount_showcount "0"
+alias c42 cl_hud_radar_scale "1"
+alias c43 hud_scaling "0.800932"
+alias c44 hud_showtargetid "1"
+alias c45 cl_righthand "1.000000"
+alias c46 cl_color "2"
+alias c47 cl_radar_always_centered "0"
+alias c48 cl_radar_icon_scale_min "0.6"
+alias c49 cl_radar_rotate "1"
+alias c50 cl_radar_square_with_scoreboard "1"
+alias lokicrosshair "c1;c2;c3;c4;c5;c6;c7;c8;c9;c10;c11;c12;c13;c14;c15;c16;c17;c18;c19;c20;c21;c22;c23;c24;c25;c26;c27;c28;c29;c30;c31;c32;c33;c34;c35;c36;c37;c38;c39;c40;c41;c42;c43;c44;c45;c46;c47;c48;c49;c50"
+// Place/Remove // infront of lokicrosshair to disable/enable loading of Lokis Crosshair on execution. 
+lokicrosshair
+
 
 // ************  **********
 // New Radio Wheel Binds
