Added Extra Radar Zoom on Duck

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -187,8 +187,8 @@ bind shift +shiftbinds
 
 // ************  **********
 // CTRL Binds
-alias +ctrlbinds "ctrlradialradio; incrementvar volume 0 1 0.2; incrementvar voice_scale 0 1 -0.3; +duck"
-alias -ctrlbinds "radialradio; incrementvar volume 0 1 -0.2; incrementvar voice_scale 0 1 0.3; -duck"
+alias +ctrlbinds "ctrlradialradio; incrementvar volume 0 1 0.2; incrementvar voice_scale 0 1 -0.3; +duck; +radar+"
+alias -ctrlbinds "radialradio; incrementvar volume 0 1 -0.2; incrementvar voice_scale 0 1 0.3; -duck; -radar+"
 bind ctrl +ctrlbinds
 
 // ************  **********
@@ -414,9 +414,11 @@ alias "dropc4" "use weapon_c4;drop;playerchatwheel CW.DroppedBomb #Chatwheel_dro
 
 // ************  **********
 //Increase Decrease Radar Size
-alias "+radar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.90"
-alias "-radar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.60"
-// BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
+alias "+radar" "cl_radar_always_centered 1; cl_radar_scale 0.80"
+alias "-radar" "cl_radar_always_centered 0; cl_radar_scale 0.60"
+//Increase/Decrease Radar Size+
+alias "+radar+" "cl_radar_always_centered 1; cl_radar_scale 0.90"
+alias "-radar+" "cl_radar_always_centered 0; cl_radar_scale 0.60"
 
 // ************  **********
 //Show netgraph when checking scoreboard
@@ -424,14 +426,12 @@ net_graph "1"
 net_graphheight "9999"
 alias "+scorenet" "+showscores; net_graphheight 0"
 alias "-scorenet" "-showscores; net_graphheight 9999"
-// BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
 // ************  **********
 //Display Damage with Switch Script
 alias displaydamage "displaydamage_on"
 alias displaydamage_on "con_filter_text Damage Given; con_filter_text_out Player; con_filter_enable 2;  developer 1; playvol buttons\blip1 0.5; alias displaydamage "displaydamage_off""
 alias displaydamage_off "con_filter_enable 0; developer 0; playvol buttons\blip2 0.5; alias displaydamage "displaydamage_on""
-// BIND WHAVETER KEY YOU WANT OR JUST PUT // IN FRONT TO DISABLE THE SCRIPT
 
 // ************  **********
 //Show crosshair Settings
