Fixed Use not working on F key

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -113,7 +113,7 @@ BindToggle "home" "cl_righthand"
 //Bind this to a key (this will turn on & off the clutch)
 bind "F2" "clutch"
 //Change f to whatever you want your inspect weapon and use key to be. Will zoom in radar as well
-bind "f" "+radar;+lookatweapon;+use;r_cleardecals"
+bind "f" "+fradar; +lookatweapon; r_cleardecals"
 //change tab to scoreboard key
 bind "TAB" "+scorenet"
 //Display Damage Key
@@ -416,6 +416,9 @@ alias "dropc4" "use weapon_c4;drop;playerchatwheel CW.DroppedBomb #Chatwheel_dro
 //Increase Decrease Radar Size
 alias "+radar" "cl_radar_always_centered 1; cl_radar_scale 0.80"
 alias "-radar" "cl_radar_always_centered 0; cl_radar_scale 0.60"
+//F key Increase Decrease Radar Size
+alias "+fradar" "+use; cl_radar_always_centered 1; cl_radar_scale 0.80"
+alias "-fradar" "-use; cl_radar_always_centered 0; cl_radar_scale 0.60"
 //Increase/Decrease Radar Size+
 alias "+radar+" "cl_radar_always_centered 1; cl_radar_scale 0.90"
 alias "-radar+" "cl_radar_always_centered 0; cl_radar_scale 0.60"
