--- a/csgo/cfg/chat.cfg
+++ b/csgo/cfg/chat.cfg
@@ -123,7 +123,7 @@ bind rightarrow rekt
 //Config Pack Download
 //
 alias pack "pack1"
-alias pack1 "say Download Loki's Config Pack. Includes: Loki's Autoexec, Sensitivity Menu, Chat Menu, Crosshair Menu, Practice Config,; alias pack pack2"
+alias pack1 "say Download Loki's Config Pack. Includes: Loki's Autoexec which features: ALT, SHIFT AND CTRL Binds, Better Audio, Damage Display Script, Clutch Key, etc; alias pack pack2"
 alias pack2 "say Chat menu has 8.3K+ views and the crosshair menu has 9K+ and was a featured item, The AutoExec has 5.5K+ Views. Comment what else I should add/make.; alias pack pack3"
 alias pack3 "say Download here: www.gamebanana.com/scripts/10664; alias pack pack4"
 alias pack4 "say This is not a hack it is part of the chat config which is a bunch of in game commands in a file. It is 100% Competitive legal.; alias pack pack1"
