Made crosshair disabled by default

--- a/csgo/cfg/autoexec.cfg
+++ b/csgo/cfg/autoexec.cfg
@@ -266,7 +266,7 @@ alias c49 cl_radar_rotate "1"
 alias c50 cl_radar_square_with_scoreboard "1"
 alias lokicrosshair "c1;c2;c3;c4;c5;c6;c7;c8;c9;c10;c11;c12;c13;c14;c15;c16;c17;c18;c19;c20;c21;c22;c23;c24;c25;c26;c27;c28;c29;c30;c31;c32;c33;c34;c35;c36;c37;c38;c39;c40;c41;c42;c43;c44;c45;c46;c47;c48;c49;c50"
 // Place/Remove // infront of lokicrosshair to disable/enable loading of Lokis Crosshair on execution. 
-lokicrosshair
+//lokicrosshair
 
 
 // ************  **********
