--- a/game/csgo/cfg/autoexec.cfg
+++ b/game/csgo/cfg/autoexec.cfg
@@ -2,59 +2,6 @@
 // REMEMBER TO PUT FORWARD SLASHES IN FRONT OF A BIND ROW TO DISABLE THE SCRIPT
 host_writeconfig
 //clear
-echo |-----------------------------------
-echo | Loki's AutoExec Loaded
-// say - Loki's AutoExec Loaded | DL github.com/TheFantasticLoki/Loki-s-Auto-Exec-Pack |
-echo | 
-echo | Type any of the following to load the mode/menu/etc
-echo | L.Main - Reexecute Autoexec
-echo | L.Help - Show's help text for all of Loki's Scripts in Config Pack
-echo | L.Chat - Loki's Chat Menu
-echo | L.Cross - Loki's Crosshair Menu
-echo | L.Servers - Loki's Server Menu
-echo | L.Prac - Loki's Private Match Practice Config
-echo | L.Bhop - Loki's Private Match BHop Config
-echo | L.Cod - Loki's Call of Duty Private Match Game Mode
-echo | L.Surf - Advanced Surf Config made by Snake1001.
-echo | L.CompPrac - -Falolout's COMPREHENSIVE PRACTICE SCRIPT
-echo | showcrosshair - Shows Crosshair Settings in Console | Useful for changing the default crosshair of the config
-echo | showviewmodel - Shows Viewmodel Settings in Console
-echo | 
-echo | Binds (also a cmd):                             | Alt Binds (ALT + key)
-echo | Z = Radial Radio Key (Scroll to change wheels)  | Alt = Nade Lineup Key
-echo | X = Radial Weapon Menu                          | q = flashbang
-echo | C = Crosshair Menu                              | e = incindeary
-echo | mouse5 = Jumpthrow                              | 1 = Smoke
-echo | K = Push to Talk Keybind                        | 2 = HE Grenade
-echo | F = radar zoom + Inspect weapon                 | 3 = Decoy
-echo | Home = Change Gun Position [Left/Right]         | Z = Commands Wheel
-echo | F3 = Clutch Key                                 | KP_7 = Drop Rifle
-echo | F4 = Mute Audio Switch                          | KP_9 = Drop AWP
-echo | F5 = Display Damage Switch                      | KP_3 = Drop Eco Rifle (Famas/Galil)
-echo | KP_MINUS = Drop C4 with team chat notification  | KP_2 = Drop Deagle
-echo | KP_PLUS = FULL AWP Buy                          | KP_1 = Drop UMP-45
-echo | KP_ENTER = Buy Standard Nades
-echo | KP_INS = Buy Standard Gear
-echo | KP_END = Buy UMP-45
-echo | KP_DOWNARROW = Buy Deagle 
-echo | KP_PGDN = Buy Eco Rifle (Famas/Galil)
-echo | KP_5 = Buy SG 
-echo | KP_HOME = Buy AK/m4 
-echo | KP_UPARROW = Buy SSG
-echo | KP_PGUP = Buy AWP
-echo |
-echo | Shift Binds (SHIFT + Key)                    | Ctrl Binds (CTRL + Key)
-echo | Shift = Volume Up .15 & Voice Volume Down .2 | Ctrl = Volume up .2 & Voice Volume Down .3
-echo | C = Menu       
-echo | 
-echo | Features:
-echo | Easy to edit (Mostly)                   | Alt Nade Keys
-echo | Better audio settings                   | Always show team equipment through walls
-echo | Clutch Key                              | Best Tickrate Settings
-echo | Left/Right hand toggle key              | Less weapon sway
-echo | Auto Weapon Pickup off by default       | Nade Lineup Key
-echo | Friends can join your community servers
-
 alias "l.chat" "exec chat"
 alias "l.cross" "exec crosshair"
 alias "l.servers" "exec servers"
@@ -103,6 +50,13 @@ alias -fKey "-lookatweapon; -fradar;"
 //change tab to scoreboard key
 bind "tab" "+showscores"
 
+//DefaultKeybinds
+alias +Default_q "bind q player_ping +TirtiaryActions;"
+alias -Default_q "bind q player_ping -TirtiaryActions;"
+bind q "+Default_q;"
+alias +Default_e "bind e +use +SecondaryActions;"
+alias -Default_e "bind e -use -SecondaryActions;"
+bind e "+Default_e;"
 
 //Radio Wheel Binds (change Z on all 3 for modifier binds to work.)
 alias radialradio bind "z" "+radialradio2"
@@ -207,6 +161,34 @@ alias -ctrlbinds "radialradio; incrementvar volume 0 1 -0.2; incrementvar snd_vo
 bind ctrl +ctrlbinds
 
 // ************  **********
+// Space/Movement Binds
+
+alias scrolljump "-jump; bind mwheelup +jump -jump; bind mwheeldown +jump -jump;"
+
+alias scrollbinds "bind mwheelup invprev; bind mwheeldown invnext;"
+
+alias +spacebinds "+jump; scrolljump;"
+alias -spacebinds "-jump; scrollbinds;"
+bind space +spacebinds
+
+// ************  **********
+// Secondary Action Binds
+
+alias +SA_q "bind q lastinv;"
+
+alias +SecondaryActions "+SA_q;"
+alias -SecondaryActions "+Default_q;"
+
+// ************  **********
+// Tirtiary Action Binds
+
+alias +TA_e "bind e +radar+;"
+
+
+alias +TirtiaryActions "+TA_e;"
+alias -TirtiaryActions "+Default_e;"``
+
+// ************  **********
 //Crosshair, Viewmodel, etc Settings
 
 alias c1 cl_crosshair_drawoutline "1"
@@ -296,8 +278,6 @@ mm_dedicated_search_maxping 100
 // usual rate commands
 rate "786432"
 
-// causes the scope to move less while moving scoped and reduces bobbing effect
-hud_scaling "1"
 cl_autohelp "0"
 r_drawtracers_firstperson "0"
 
@@ -520,3 +500,58 @@ alias "assault" "map cs_assault"
 // *************************
 
 engine_low_latency_sleep_after_client_tick "true"
+
+
+
+echo |-----------------------------------
+echo | Loki's AutoExec Loaded
+// say - Loki's AutoExec Loaded | DL github.com/TheFantasticLoki/Loki-s-Auto-Exec-Pack |
+echo | 
+echo | Type any of the following to load the mode/menu/etc
+echo | L.Main - Reexecute Autoexec
+echo | L.Help - Show's help text for all of Loki's Scripts in Config Pack
+echo | L.Chat - Loki's Chat Menu
+echo | L.Cross - Loki's Crosshair Menu
+echo | L.Servers - Loki's Server Menu
+echo | L.Prac - Loki's Private Match Practice Config
+echo | L.Bhop - Loki's Private Match BHop Config
+echo | L.Cod - Loki's Call of Duty Private Match Game Mode
+echo | L.Surf - Advanced Surf Config made by Snake1001.
+echo | L.CompPrac - -Falolout's COMPREHENSIVE PRACTICE SCRIPT
+echo | showcrosshair - Shows Crosshair Settings in Console | Useful for changing the default crosshair of the config
+echo | showviewmodel - Shows Viewmodel Settings in Console
+echo | 
+echo | Binds (also a cmd):                             | Alt Binds (ALT + key)
+echo | Z = Radial Radio Key (Scroll to change wheels)  | Alt = Nade Lineup Key
+echo | X = Radial Weapon Menu                          | q = flashbang
+echo | C = Crosshair Menu                              | e = incindeary
+echo | mouse5 = Jumpthrow                              | 1 = Smoke
+echo | K = Push to Talk Keybind                        | 2 = HE Grenade
+echo | F = radar zoom + Inspect weapon                 | 3 = Decoy
+echo | Home = Change Gun Position [Left/Right]         | Z = Commands Wheel
+echo | F3 = Clutch Key                                 | KP_7 = Drop Rifle
+echo | F4 = Mute Audio Switch                          | KP_9 = Drop AWP
+echo | F5 = Display Damage Switch                      | KP_3 = Drop Eco Rifle (Famas/Galil)
+echo | KP_MINUS = Drop C4 with team chat notification  | KP_2 = Drop Deagle
+echo | KP_PLUS = FULL AWP Buy                          | KP_1 = Drop UMP-45
+echo | KP_ENTER = Buy Standard Nades
+echo | KP_INS = Buy Standard Gear
+echo | KP_END = Buy UMP-45
+echo | KP_DOWNARROW = Buy Deagle 
+echo | KP_PGDN = Buy Eco Rifle (Famas/Galil)
+echo | KP_5 = Buy SG 
+echo | KP_HOME = Buy AK/m4 
+echo | KP_UPARROW = Buy SSG
+echo | KP_PGUP = Buy AWP
+echo |
+echo | Shift Binds (SHIFT + Key)                    | Ctrl Binds (CTRL + Key)
+echo | Shift = Volume Up .15 & Voice Volume Down .2 | Ctrl = Volume up .2 & Voice Volume Down .3
+echo | C = Menu       
+echo | 
+echo | Features:
+echo | Easy to edit (Mostly)                   | Alt Nade Keys
+echo | Better audio settings                   | Always show team equipment through walls
+echo | Clutch Key                              | Best Tickrate Settings
+echo | Left/Right hand toggle key              | Less weapon sway
+echo | Auto Weapon Pickup off by default       | Nade Lineup Key
+echo | Friends can join your community servers
