--- a/game/csgo/cfg/autoexec.cfg
+++ b/game/csgo/cfg/autoexec.cfg
@@ -279,7 +279,7 @@ mm_dedicated_search_maxping 100
 rate "786432"
 
 cl_autohelp "0"
-r_drawtracers_firstperson "0"
+r_drawtracers_firstperson true
 
 // ************  **********
 // Mute Function
