--- a/game/csgo/cfg/autoexec.cfg
+++ b/game/csgo/cfg/autoexec.cfg
@@ -10,7 +10,7 @@
 host_writeconfig
 // ***** Script Main Command Configuration *****
 
-alias "l.main" "exec l.main.cfg"
+alias "l.main" "exec autoexec.cfg"
 alias "l.help" "l.help.main; l.help.binds; l.help.cmds;"
 
 // ***** Common Settings *****
@@ -264,6 +264,13 @@ alias -MA_NS "-MA_W; -MA_S; -MA_A; -MA_D; echo | - Null Strafe [OFF]"
 alias +MovementActions_NullStrafe "+MA_NS;"
 alias -MovementActions_NullStrafe "-MA_NS;"
 
+alias +MA_JB "-duck_; +jump_;"
+alias -MA_JB "-jump_;"
+
+alias +MA_LJ "+duck_; +jump_;"
+alias -MA_LJ "-duck_; -jump_;"
+
+
 // *** SecondaryActionBinds ***
 
 alias +SA_1 "bind 1 radio1;"
@@ -319,6 +326,7 @@ alias "-CtrlA_#3" "-radar+"
 alias +CtrlActions "+CtrlA_#1; +CtrlA_#2; +CtrlA_#3;"
 alias -CtrlActions "-CtrlA_#1; -CtrlA_#2; -CtrlA_#3;"
 
+
 // *** AltActionBinds ***
 
 alias +AltA_1 "bind 1 smoke;"
@@ -343,33 +351,18 @@ alias -AltA_F10 "bind F10 +Default_F10;"
 Alias +AltActions "+AltA_1; +AltA_2; +AltA_3; +AltA_q; +AltA_e; +AltA_F3; +AltA_F4; +AltA_F5; +AltA_F10;"
 Alias -AltActions "-AltA_1; -AltA_2; -AltA_3; -AltA_q; -AltA_e; -AltA_F3; -AltA_F4; -AltA_F5; -AltA_F10;"
 
+
 // ***** Script Functions *****
 
 // *** Crosshair Settings ***
-alias l.cross.1.1 cl_crosshair_drawoutline "1"
-alias l.cross.1.2 cl_crosshair_dynamic_maxdist_splitratio "0.05"
-alias l.cross.1.3 cl_crosshair_dynamic_splitalpha_innermod "1"
-alias l.cross.1.4 cl_crosshair_dynamic_splitalpha_outermod "0.0"
-alias l.cross.1.5 cl_crosshair_dynamic_splitdist "4"
-alias l.cross.1.6 cl_crosshair_friendly_warning "1"
-alias l.cross.1.7 cl_crosshair_outlinethickness "1.000000"
-alias l.cross.1.8 cl_crosshair_sniper_width "1"
-alias l.cross.1.9 cl_crosshair_t "0"
-alias l.cross.1.10 cl_crosshairalpha "255"
-alias l.cross.1.11 cl_crosshaircolor "5"
-alias l.cross.1.12 cl_crosshaircolor_b "100"
-alias l.cross.1.13 cl_crosshaircolor_g "220"
-alias l.cross.1.14 cl_crosshaircolor_r "0"
-alias l.cross.1.15 cl_crosshairdot "0"
-alias l.cross.1.16 cl_crosshairgap "-4"
-alias l.cross.1.17 cl_crosshairgap_useweaponvalue "0"
-alias l.cross.1.18 cl_crosshairsize "2"
-alias l.cross.1.19 cl_crosshairstyle "0"
-alias l.cross.1.20 cl_crosshairthickness "0"
-alias l.cross.1.21 cl_crosshairusealpha "1"
-alias l.cross.1.22 cl_fixedcrosshairgap "3"
+alias l.cross.1.1  "cl_crosshair_drawoutline 1;                      cl_fixedcrosshairgap 3;  cl_crosshaircolor 5;                    cl_crosshaircolor_b 100;"
+alias l.cross.1.2  "cl_crosshair_dynamic_maxdist_splitratio 0.05;    cl_crosshairusealpha 1;  cl_crosshairalpha 255;                  cl_crosshaircolor_g 220;"
+alias l.cross.1.3  "cl_crosshair_dynamic_splitalpha_innermod 1;      cl_crosshairthickness 0; cl_crosshair_t 0;                       cl_crosshaircolor_r 0;"
+alias l.cross.1.4  "cl_crosshair_dynamic_splitalpha_outermod 0.0;    cl_crosshairstyle 0;     cl_crosshair_sniper_width 1;            cl_crosshairdot 0;"
+alias l.cross.1.5  "cl_crosshair_dynamic_splitdist 4;                cl_crosshairsize 2;      cl_crosshair_outlinethickness 1.000000; cl_crosshairgap -4;"
+alias l.cross.1.6  "cl_crosshair_friendly_warning 1;                 cl_crosshairgap_useweaponvalue 0;"
 
-alias l.cross.1 "l.cross.1.1; l.cross.1.2; l.cross.1.3; l.cross.1.4; l.cross.1.5; l.cross.1.6; l.cross.1.7; l.cross.1.8; l.cross.1.9; l.cross.1.10; l.cross.1.11; l.cross.1.12; l.cross.1.13; l.cross.1.14; l.cross.1.15; l.cross.1.16; l.cross.1.17; l.cross.1.18; l.cross.1.19; l.cross.1.20; l.cross.1.21; l.cross.1.22;"
+alias l.cross.1 "l.cross.1.1; l.cross.1.2; l.cross.1.3; l.cross.1.4; l.cross.1.5; l.cross.1.6;"
 
 // *** Viewmodel Settings ***
 alias l.vm.1.1 viewmodel_fov "60"
@@ -426,7 +419,6 @@ alias "VC_0" "voice_modenable 0; playvol buttons\blip2 0.5; alias VC VC_1"
 alias "ClutchMode" "ClutchModeOn"
 alias "ClutchModeOn" "VC_0; ClutchModeSoundOn; cl_clearhinthistory; playvol buttons\weapon_confirm 0.5; say_team Voice Disabled, I can't hear anyone now; alias ClutchMode ClutchModeOff"
 alias "ClutchModeOff" "VC_1; ClutchModeSoundOff; playvol buttons\button2 0.5; say_team Voice Enabled, I can hear you now; alias ClutchMode ClutchModeOn"
-clutchoff
 
 // * Clutch audio options * //Feel free to edit these how you like.
 alias "ClutchModeSoundOn" "volume 1; snd_menumusic_volume 0; snd_deathcamera_volume 0; snd_mapobjective_volume 0; snd_roundend_volume 0; snd_roundstart_volume 0; snd_tensecondwarning_volume 1"
@@ -484,8 +476,100 @@ mm_dedicated_search_maxping 100
 cl_autohelp "0"
 r_drawtracers_firstperson true
 
+// *** Crosshairs ***
+alias "l.cross.neok.1"  "cl_crosshairalpha 255;  cl_crosshaircolor 0;"
+alias "l.cross.neok.2"  "cl_crosshaircolor_b 0;  cl_crosshaircolor_g 0;            cl_crosshaircolor_r 255;  cl_crosshairdot 0;"
+alias "l.cross.neok.3"  "cl_crosshairgap -3;     cl_crosshairgap_useweaponvalue 0; cl_crosshairscale 0;      cl_crosshairsize 3;"
+alias "l.cross.neok.4"  "cl_crosshairstyle 4;    cl_crosshairthickness 0;          cl_crosshairusealpha 1;   cl_fixedcrosshairgap 3;"
+alias "l.cross.neok"    "l.cross.neok.1; l.cross.neok.2; l.cross.neok.3; l.cross.neok.4;"
+
+alias "l.cross.device.1"  "cl_crosshairalpha 255; cl_crosshaircolor 5;              hud_showtargetid 1;"
+alias "l.cross.device.2"  "cl_crosshaircolor_b 0; cl_crosshaircolor_g 0;            cl_crosshaircolor_r 255; cl_crosshairdot 0;"
+alias "l.cross.device.3"  "cl_crosshairgap -3;    cl_crosshairgap_useweaponvalue 0; cl_crosshairscale 0;     cl_crosshairsize 3;"
+alias "l.cross.device.4"  "cl_crosshairstyle 1;   cl_crosshairthickness 0;          cl_crosshairusealpha 1;  cl_fixedcrosshairgap -5;"
+alias "l.cross.device"    "l.cross.device.1; l.cross.device.2; l.cross.device.3; l.cross.device.4;"
+
+alias "l.cross.banana.1"  "cl_crosshair_outlinethickness 1; cl_fixedcrosshairgap 3; cl_crosshair_sniper_width 2; cl_crosshair_t 0;"
+alias "l.cross.banana.2"  "cl_crosshairalpha 100;           cl_crosshaircolor 5;    cl_crosshaircolor_b 0;       cl_crosshaircolor_g 255;"
+alias "l.cross.banana.3"  "cl_crosshaircolor_r 255;         cl_crosshairdot 1;      cl_crosshairgap -4;          cl_crosshairscale 1;"
+alias "l.cross.banana.4"  "cl_crosshairsize 0.50;           cl_crosshairstyle 1;    cl_crosshairthickness -5;    cl_crosshairusealpha 1;"
+alias "l.cross.banana"    "l.cross.banana.1; l.cross.banana.2; l.cross.banana.3; l.cross.banana.4;"
+
+alias "l.cross.cruxal.1"    "cl_crosshair_outlinethickness 1; cl_fixedcrosshairgap 1; cl_crosshair_sniper_width 1; cl_crosshair_t 0;"
+alias "l.cross.cruxal.2"    "cl_crosshairalpha 400;           cl_crosshaircolor 5;    cl_crosshaircolor_b 0;       cl_crosshaircolor_g 255;"
+alias "l.cross.cruxal.3"    "cl_crosshaircolor_r 0;           cl_crosshairdot 0;      cl_crosshairgap -2;          cl_crosshairscale 0;"
+alias "l.cross.cruxal.4"    "cl_crosshairsize 2;              cl_crosshairstyle 4;    cl_crosshairthickness 0;     cl_crosshairusealpha 1;"
+alias "l.cross.cruxal"      "l.cross.cruxal.1; l.cross.cruxal.2; l.cross.cruxal.3; l.cross.cruxal.4;"
+
+alias "l.cross.nothing.1"    "cl_crosshair_outlinethickness 0.5; cl_fixedcrosshairgap 1; cl_crosshair_sniper_width 1; cl_crosshair_t 0;"
+alias "l.cross.nothing.2"    "cl_crosshairalpha 255;             cl_crosshaircolor 1;    cl_crosshaircolor_b 0;       cl_crosshaircolor_g 0;"
+alias "l.cross.nothing.3"    "cl_crosshaircolor_r 255;           cl_crosshairdot 0;      cl_crosshairgap 0;           cl_crosshairscale 0;"
+alias "l.cross.nothing.4"    "cl_crosshairsize 5;                cl_crosshairstyle 4;    cl_crosshairthickness 1.5;   cl_crosshairusealpha 1;"
+alias "l.cross.nothing"      "l.cross.nothing.1; l.cross.nothing.2; l.cross.nothing.3; l.cross.nothing.4;"
+
+alias "l.cross.scream.1"    "cl_crosshair_outlinethickness 1; cl_fixedcrosshairgap -4; cl_crosshair_sniper_width 1; cl_crosshair_t 0;"
+alias "l.cross.scream.2"    "cl_crosshairalpha 255;           cl_crosshaircolor 4;     cl_crosshaircolor_b 250;     cl_crosshaircolor_g 250;"
+alias "l.cross.scream.3"    "cl_crosshaircolor_r 250;         cl_crosshairdot 0;       cl_crosshairgap -2;          cl_crosshairscale 0;"
+alias "l.cross.scream.4"    "cl_crosshairsize 3;              cl_crosshairstyle 4;     cl_crosshairthickness 1;     cl_crosshairusealpha 1;"
+alias "l.cross.scream"      "l.cross.scream.1; l.cross.scream.2; l.cross.scream.3; l.cross.scream.4;"
+
+alias "l.cross.olof.1"    "cl_crosshair_outlinethickness 1;  cl_fixedcrosshairgap 3;    cl_crosshairscale 0;       cl_crosshairgap -2;"
+alias "l.cross.olof.2"    "cl_crosshair_sniper_width 1;      cl_crosshair_t 0;          cl_crosshairusealpha 1;    cl_crosshairsize 4;"
+alias "l.cross.olof.3"    "cl_crosshairalpha 200;            cl_crosshaircolor 3;       cl_crosshairthickness 0;   cl_crosshairdot 0;"
+alias "l.cross.olof.4"    "cl_crosshaircolor_b 255;          cl_crosshaircolor_g 255;   cl_crosshairstyle 4;       cl_crosshaircolor_r 255;"
+alias "l.cross.olof"      "l.cross.olof.1; l.cross.olof.2; l.cross.olof.3; l.cross.olof.4;"
+
+alias "l.cross.summit.1"    "cl_crosshair_outlinethickness 1; cl_fixedcrosshairgap -3;  cl_crosshairthickness 1; cl_crosshairusealpha 1;"
+alias "l.cross.summit.2"    "cl_crosshair_sniper_width 2;     cl_crosshair_t 0;         cl_crosshairsize 20;     cl_crosshairstyle 2;"
+alias "l.cross.summit.3"    "cl_crosshairalpha 400;           cl_crosshaircolor 1;      cl_crosshairgap -2;      cl_crosshairscale 0;"
+alias "l.cross.summit.4"    "cl_crosshaircolor_b 0;           cl_crosshaircolor_g 0;    cl_crosshaircolor_r 255; cl_crosshairdot 0;"
+alias "l.cross.summit"      "l.cross.summit.1; l.cross.summit.2; l.cross.summit.3; l.cross.summit.4;"
+
+alias "l.cross.shroud.1"    "cl_crosshair_outlinethickness 1;       "
+alias "l.cross.shroud.2"    "cl_crosshair_sniper_width 2; cl_crosshair_t 0;        cl_crosshairusealpha 1; cl_fixedcrosshairgap -2;"
+alias "l.cross.shroud.3"    "cl_crosshairalpha 255;       cl_crosshaircolor 5;     cl_crosshairstyle 4;    cl_crosshairthickness 1.5;"
+alias "l.cross.shroud.4"    "cl_crosshaircolor_b 250;     cl_crosshaircolor_g 200; cl_crosshairscale 1;    cl_crosshairsize 3.5;"
+alias "l.cross.shroud.5"    "cl_crosshaircolor_r 120;     cl_crosshairdot 0;       cl_crosshairgap -2;     cl_crosshairgap_useweaponvalue 0;"
+alias "l.cross.shroud"      "l.cross.shroud.1; l.cross.shroud.2; l.cross.shroud.3; l.cross.shroud.4; l.cross.shroud.5;"
+
+alias "l.cross.hazz.1"    "cl_crosshair_outlinethickness 0.1; cl_crosshair_sniper_show_normal_inaccuracy 0;"
+alias "l.cross.hazz.2"    "cl_crosshair_sniper_width 1;       cl_crosshair_t 0;        cl_crosshairusealpha 1;  cl_fixedcrosshairgap 2;"
+alias "l.cross.hazz.3"    "cl_crosshairalpha 250;             cl_crosshaircolor 5;     cl_crosshairstyle 4;     cl_crosshairthickness 0.4;"
+alias "l.cross.hazz.4"    "cl_crosshaircolor_b 144;           cl_crosshaircolor_g 195; cl_crosshairscale 120;   cl_crosshairsize 1.3;"
+alias "l.cross.hazz.5"    "cl_crosshaircolor_r 27;            cl_crosshairdot 0;       cl_crosshairgap -1;      cl_crosshairgap_useweaponvalue 0;"
+alias "l.cross.hazz"      "l.cross.hazz.1; l.cross.hazz.2; l.cross.hazz.3; l.cross.hazz.4; l.cross.hazz.5;"
+
+alias "l.cross.swag.1"    "cl_crosshair_outlinethickness 1; cl_crosshair_sniper_show_normal_inaccuracy 0;"
+alias "l.cross.swag.2"    "cl_crosshair_sniper_width 0.01;  cl_crosshair_t 0;        cl_crosshairusealpha 1;  cl_fixedcrosshairgap -3;"
+alias "l.cross.swag.3"    "cl_crosshairalpha 200;           cl_crosshaircolor 2;     cl_crosshairstyle 1;     cl_crosshairthickness 1.15;"
+alias "l.cross.swag.4"    "cl_crosshaircolor_b 50;          cl_crosshaircolor_g 250; cl_crosshairscale 0;     cl_crosshairsize 3;"
+alias "l.cross.swag.5"    "cl_crosshaircolor_r 250;         cl_crosshairdot 0;       cl_crosshairgap -2;      cl_crosshairgap_useweaponvalue 0;"
+alias "l.cross.swag"      "l.cross.swag.1; l.cross.swag.2; l.cross.swag.3; l.cross.swag.4; l.cross.swag.5;"
+
+alias "l.cross.moe.1"    "cl_crosshair_outlinethickness 1; cl_crosshair_sniper_show_normal_inaccuracy 0;"
+alias "l.cross.moe.2"    "cl_crosshair_sniper_width 1;     cl_crosshair_t 0;      cl_crosshairusealpha 1;  cl_fixedcrosshairgap 3;"
+alias "l.cross.moe.3"    "cl_crosshairalpha 200;           cl_crosshaircolor 1;   cl_crosshairstyle 5;     cl_crosshairthickness -1;"
+alias "l.cross.moe.4"    "cl_crosshaircolor_b 1;           cl_crosshaircolor_g 1; cl_crosshairscale 4;     cl_crosshairsize 2.5;"
+alias "l.cross.moe.5"    "cl_crosshaircolor_r 1;           cl_crosshairdot 0;     cl_crosshairgap 0;       cl_crosshairgap_useweaponvalue 0;"
+alias "l.cross.moe"      "l.cross.moe.1; l.cross.moe.2; l.cross.moe.3; l.cross.moe.4; l.cross.moe.5;"
+
+alias "l.cross.flap.1"    "cl_crosshair_outlinethickness 0.5; cl_crosshair_sniper_show_normal_inaccuracy 0;"
+alias "l.cross.flap.2"    "cl_crosshair_sniper_width 1;       cl_crosshair_t 0;        cl_crosshairusealpha 1;  cl_fixedcrosshairgap 1;"
+alias "l.cross.flap.3"    "cl_crosshairalpha 255;             cl_crosshaircolor 0;     cl_crosshairstyle 4;     cl_crosshairthickness 1;"
+alias "l.cross.flap.4"    "cl_crosshaircolor_b 0;             cl_crosshaircolor_g 255; cl_crosshairscale 0;     cl_crosshairsize 2.5;"
+alias "l.cross.flap.5"    "cl_crosshaircolor_r 0;             cl_crosshairdot 0;       cl_crosshairgap -3;      cl_crosshairgap_useweaponvalue 0;"
+alias "l.cross.flap"      "l.cross.flap.1; l.cross.flap.2; l.cross.flap.3; l.cross.flap.4; l.cross.flap.5;"
+
+alias "l.cross.woxic.1"    "cl_crosshairalpha 200;   cl_crosshaircolor 5;     cl_crosshair_drawoutline 0;"
+alias "l.cross.woxic.2"    "cl_crosshaircolor_b 129; cl_crosshaircolor_r 250; cl_crosshairthickness 0; cl_crosshair_sniper_width 1;"
+alias "l.cross.woxic.3"    "cl_crosshaircolor_g 50;  cl_crosshairdot 0;       cl_crosshairstyle 4;     cl_crosshairusealpha 1;"
+alias "l.cross.woxic.4"    "cl_crosshairgap -1;      cl_crosshairsize 3;"
+alias "l.cross.woxic"      "l.cross.woxic.1; l.cross.woxic.2; l.cross.woxic.3; l.cross.woxic.4;"
+
+
 // *** Various Commands (Map/Weapon Aliases) ***
 alias "binds" "key_listboundkeys"
+alias "refundall" "sellbackall;"
 
 alias "smoke" "slot8"
 alias "flash" "slot7"
@@ -580,6 +664,7 @@ alias "assault" "map cs_assault"
 host_writeconfig
 say "Loki's Auto Execute Script for CS2 Loaded - Version 3.0 | GitHub: github.com/TheFantasticLoki/LAE-CS"
 muteoff
+ClutchModeOff
 l.cross.1 // Uses Default/Loki's Crosshair
 l.vm.1
 l.hud.1
